infrastructure/ingress-controller/api-server/svc-apiserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiserver
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: apiserver-passthrough.crownlabs.polito.it
    metallb.universe.tf/address-pool: public
spec:
  selector:
    component: kube-apiserver
  ports:
  - protocol: TCP
    port: 6443
    targetPort: 6443
  type: LoadBalancer
  externalTrafficPolicy: Local
